@@ -7,12 +7,12 @@
 
 <sect2 id="rnplatform">
   <title>Platform Improvements</title>
-  <para>The GNOME &version; Development Platform adds a few small API improvements, while maintaining backwards compatibilty and API-stability. In particular this time we have:
+  <para>The GNOME &version; Development Platform provides a stable base for third-party software developers, and for the GNOME Desktop itself. GNOME &version; adds some API improvements, while maintaining backwards compatibilty and API-stability. In particular this time we have:
   
     <itemizedlist>
-      <listitem><para>New API in gnome-vfs to allow detection of local servers via DNS-Based Service Discovery.</para></listitem>
-      <listitem><para>New API is also wrapped in the Platform Bindings, which allow application in programming languages other than C.</para></listitem>
-      <listitem><para>GNOME &version; now includes official Python bindings, in addition to C++, Java, and Perl bindings, via the <ulink url="http://www.gtkmm.org/">gtkmm</ulink>, <ulink url="http://java-gnome.sourceforge.net/">java-gnome</ulink>, <ulink url="http://gtk2-perl.sourceforge.net/">gtk2-perl</ulink>, and <ulink url="http://www.pygtk.org/">pygtk</ulink> projects.</para></listitem>
+      <listitem><para>GTK+ 2.6 has new cell renderers, new buttons, an IconView, and a new about box.</para></listitem>
+      <listitem><para>glib 2.6 has an easier command-line parsing API.</para></listitem>
+      <listitem><para>The Platform Bindings now include full Python APIs for the GNOME Development Platform, via gnome-python. This in addition to the current C++, Java, Perl, and Python bindings, via the <ulink url="http://www.gtkmm.org/">gtkmm</ulink>, <ulink url="http://java-gnome.sourceforge.net/">java-gnome</ulink>, <ulink url="http://gtk2-perl.sourceforge.net/">gtk2-perl</ulink>, and <ulink url="http://www.pygtk.org/">pygtk</ulink> projects.</para></listitem>
     </itemizedlist>
 
     </para>
