@@ -1,3 +1,7 @@
+2005-02-20  Murray Cumming  <murrayc@murrayc.com>
+
+	* rndesktop.xml: Did nautilus and gnome-backgrounds bits.
+
 2005-02-19  Murray Cumming  <murrayc@murrayc.com>
 
 	* rnutilities.xml: Mentioned changes in search, archive manager, and 
